Fix navigation list on small devices

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -242,14 +242,6 @@ a.nav-text:hover {
 		box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-webkit-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-moz-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
-		@media screen and (max-width: 448px) {
-			&{
-				right: 0;
-				left: 50%;
-				transform: translateX(-50%);
-				width: calc(100vw - 1rem);
-			}
-		}
 	}
 
 	& li a {
